language/move-lang/tests/move_check/parser/function_params_missing.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_params_missing.move:3:12
  │
3 │     fun fn { }
  │            ^
  │            │
  │            Unexpected '{'
  │            Expected '('

