language/move-lang/tests/move_check/parser/function_params_missing.move
module M {
    // The function parameters (in parens) must always be specified.
    fun fn { }
}
